Repair on script generator

--- a/public/compiler.html
+++ b/public/compiler.html
@@ -106,7 +106,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
   <script>
     document.getElementById('downloadBtn').addEventListener('click', function() {
-        var title = document.getElementById('titleInput').value; 
+        var title = document.getElementById('title').value; 
         if (title) {
             window.location.href = `/download/${title}`; 
         } else {
