--- a/public/compiler.html
+++ b/public/compiler.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>P4-DOCKER</title>
+  <title>P4D</title>
   <!-- Bootstrap CSS -->
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="./assets/css/style.css">
@@ -15,7 +15,7 @@
   <nav class="navbar navbar-expand-lg navbar-light bg-info">
     <a class="navbar-brand" href="#">
       <img src="./assets/images/logo.png" width="50" height="50" alt="">
-      P4-DOCKER
+      P4D
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
