--- a/public/index.html
+++ b/public/index.html
@@ -264,6 +264,20 @@
               <label for="targetMac">MAC Address:</label>
               <input type="text" class="form-control" id="targetMac" placeholder="00:00:00:00:00:00" required>
             </div>
+            <div class="form-group">
+              <input type="checkbox" id="customEdge" name="customEdge">
+              <label for="customEdge">Define bandwidth and delay</label>
+          </div>
+          <div id="conditional-fields" style="display:none;">
+            <div class="form-group">
+                <label for="bandwidth">Bandwidth:</label>
+                <input type="text" class="form-control" id="bandwidth" placeholder="50kbit;5mbit" >
+            </div>
+            <div class="form-group">
+                <label for="delay">Delay :</label>
+                <input type="text" class="form-control" id="delay" placeholder="time in ms" value="0" >
+            </div>
+        </div>
           </form>
         </div>
         <div class="modal-footer">
@@ -397,6 +411,20 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
   <script src="https://unpkg.com/cytoscape/dist/cytoscape.min.js"></script>
   <script src="./assets/js/script.js"></script>
+  <script>
+    document.addEventListener("DOMContentLoaded", function() {
+        var checkbox = document.getElementById("customEdge");
+        var conditionalFields = document.getElementById("conditional-fields");
+    
+        checkbox.addEventListener('change', function() {
+            if (this.checked) {
+                conditionalFields.style.display = "block";
+            } else {
+                conditionalFields.style.display = "none";
+            }
+        });
+    });
+    </script>
   <script>
     $(document).ready(function() {
       $('[data-toggle="tooltip"]').tooltip({ html: true });
