--- a/public/index.html
+++ b/public/index.html
@@ -75,8 +75,8 @@
                         <!-- Host form fields -->
                         <div id="hostFields" style="display: none;">
                             <div class="form-group">
-                                <label for="hostName">Nome:</label>
-                                <input type="text" class="form-control" id="hostName" placeholder="h1" required>
+                                <label for="hostName">Name:</label>
+                                <input type="text" class="form-control"  maxlength="11" id="hostName" placeholder="h1" required>
                             </div>
                           <!--   <div class="form-check">
                                 <input class="form-check-input" type="checkbox" value="" id="hostTCPPOff">
@@ -87,7 +87,7 @@
                              </div> -->
 
                             <div class="form-group">
-                                <label for="hostPortas">Portas:</label>
+                                <label for="hostPortas">Ports:</label>
                                 <input type="number" step="1" min="1" max="100" id="hostPortas" placeholder="1" required/>
                             </div>
                             <div class="form-group">
@@ -109,8 +109,8 @@
                         <!-- Switch form fields -->
                         <div id="switchFields" style="display: none;">
                             <div class="form-group">
-                                <label for="SWhName">Nome:</label>
-                                <input type="text" class="form-control" id="SWhName" placeholder="sw1" required>
+                                <label for="SWhName">Name:</label>
+                                <input type="text" class="form-control" id="SWhName"  maxlength="11" placeholder="sw1" required>
                             </div>
                             <div class="form-group">
                                 <label for="SWCode">P4 Code name:</label>
@@ -122,7 +122,7 @@
                                    
                             </div>
                             <div class="form-group">
-                                <label for="SWports">Portas:</label>
+                                <label for="SWports">Ports:</label>
                                 <input type="number" class="form-control" step="1" min="1" max="100" id="SWports" required/>
                             </div>
                             <div class="form-group">
