--- a/public/compiler.html
+++ b/public/compiler.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>P4D</title>
+  <title>P4Docker</title>
   <!-- Bootstrap CSS -->
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="./assets/css/style.css">
@@ -15,19 +15,26 @@
   <nav class="navbar navbar-expand-lg navbar-light bg-info">
     <a class="navbar-brand" href="#">
       <img src="./assets/images/logo.png" width="50" height="50" alt="">
-      P4D
+      P4Docker
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
-          <li class="nav-item active">
-            <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+          <li class="nav-item item">
+            <a class="nav-link item" href="/">Home </a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/compiler">Compiler</a>
+          <li class="nav-item item">
+            <a class="nav-link item" href="/compiler">Compiler</a>
           </li>
+          <li class="nav-item item"></li>
+            <a class="nav-link item" href="/projectsdeploy">Projects</a>
+          </li>
+          <li class="nav-item item">
+            <a class="nav-link item" href="https://dnredsons-organization.gitbook.io/p4docker" target="_blank">Help <i class="fa-regular fa-circle-question"></i></a>
+          </li>
+         
          
         </ul>
       </div>
